Use more List methods